# EconomicEngine

./: .gitignore  CMakeLists.txt  EconomicEngine.sln  EconomicEngine.sln.DotSettings  LICENSE  README.md  TODO.md  cmakelists.txt
Content/: makeImage.py
DesignPattern/: cmakelists.txt
EconomicEngine/: AbstractFactory.h  Ask.cpp  Ask.h  Behavior.cpp  Behavior.h  Clonable.h  Countable.cpp  Countable.h  Craft.cpp  Craft.h  CraftFactory.cpp  CraftFactory.h  Currency.h  EconomicEngine.h  EconomicEngine.vcxproj  EconomicEngine.vcxproj.filters  Food.cpp  Food.h  Job.cpp  Job.h  JobFactory.cpp  JobFactory.h  Money.cpp  Money.h  Observable.cpp  Observable.h  Observer.h  Singleton.h  StockExchange.cpp  StockExchange.h  ToolBehavior.cpp  ToolBehavior.h  Tradable.cpp  Tradable.h  TradableFactory.h  TradableManager.cpp  TradableManager.h  Trader.cpp  Trader.h  TraderManager.cpp  (+7 more)
EconomicEngineDebugGUI/: .qmake.stash  Axe.cpp  Axe.h  AxeBehavior.cpp  AxeBehavior.h  Baker.cpp  Baker.h  Bow.cpp  Bow.h  BowBehavior.cpp  BowBehavior.h  Bread.cpp  Bread.h  Butcher.cpp  Butcher.h  Coal.cpp  Coal.h  DebugEconomicEngine.cpp  DebugEconomicEngine.h  DebugTurnManager.cpp  DebugTurnManager.h  Econnomique.pro  Economic.files  Economic.includes  EconomicEngineDebugGUI.cpp  EconomicEngineDebugGUI.h  EconomicEngineDebugGUI.pri  EconomicEngineDebugGUI.pro  EconomicEngineDebugGUI.qrc  EconomicEngineDebugGUI.rc  EconomicEngineDebugGUI.sln  EconomicEngineDebugGUI.ui  EconomicEngineDebugGUI.vcxproj  EconomicEngineDebugGUI.vcxproj.DotSettings  EconomicEngineDebugGUI.vcxproj.filters  Farmer.cpp  Farmer.h  (+43 more)
(+130 files in other folders)
